--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p align="center">Aquí encontrarás algunos de mis trabajos más relevantes:</p>
 
 
-### Carrusel
+ Carrusel
 <div style="display: flex; overflow-x: auto; gap: 15px; padding: 15px 0; justify-content: center;">
   <img src="descargar.jpeg" width="400" style="border-radius: 8px;"/>
   <img src="descargar (1).jpeg" width="400" style="border-radius: 8px;"/>
@@ -28,7 +28,7 @@
 </div>
 
 
-### 📌 Información Adicional
+ 📌 Información Adicional
 <div style="background-color: #f6f8fa; padding: 15px; border-radius: 8px; margin-top: 20px;">
   <h4>¿Por qué usar GitHub para tu página web?</h4>
   <p>GitHub es una plataforma ideal para alojar contenido estático, mostrar proyectos y colaborar. Puedes:</p>
